<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="app_name">KC Utils</string>
    <string name="fb_app_id">910238615719294</string>
    <string name="title_activity_charging_locker_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable charging</string>
    <string name="pref_title_charging_alert">Enable charging alert</string>
    <string name="pref_description_social_recommendations">Enable smart charging to optimize battery. Contains Ads.</string>
    <string name="pref_description_charging_alert">Enable smart charging alert to optimize battery. Contains Ads.</string>
    <string name="pref_header_key">charger_example_switch</string>
    <string name="pref_charging_alert_key">charger_alert_switch</string>

    <string name="pref_title_locker_recommendations">Enable locker</string>
    <string name="pref_description_locker_recommendations">Enable beautiful locker. Contains Ads.</string>
    <string name="pref_locker_key">locker_example_switch</string>
    <string name="title_activity_demo_show_boost">DemoShowBoostActivity</string>

</resources>
