<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/pref_header_key"
        android:summary="@string/pref_description_social_recommendations"
        android:title="@string/pref_title_social_recommendations" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/pref_charging_alert_key"
        android:summary="@string/pref_description_social_recommendations"
        android:title="@string/pref_title_charging_alert" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/pref_locker_key"
        android:summary="@string/pref_description_locker_recommendations"
        android:title="@string/pref_title_locker_recommendations" />
</PreferenceScreen>
